fix issue with graph going off screen when money too high

--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ canvas {
     align-items: center;
     display: flex;
     justify-content: center;
+	max-height: 100%;
 }
 
 .button-row {
